[package]
name = "boolean-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
svg = "0.13.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = ["console"] }
yew = { version = "0.20.0", features = ["csr"] }
